add Password entity, repo, service, complete registration endpoint and service method

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,3 +1,7 @@
-default.invalid.length=Property "{0}" must be between {min} and {max} characters long
-default.value.invalid=Value for property "{0}" is invalid
+default.invalid.length=Value must be between {min} and {max} characters long
+default.value.invalid=The provided value is invalid
 default.value.required=Value for this property is required
+password.invalid=Your password does not cover all the security requirements. It should have at least one upper case English letter, one lower case English letter, one digit, one special character and be minimum 8 characters long.
+user.not.found=User with id {0} not found
+user.name.not.found=UserName with id {0} not found
+password.not.found=Password with id {0} not found
