add login functionality, jwt token generation, AuthenticationFilter

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,7 +1,15 @@
 default.invalid.length=Value must be between {min} and {max} characters long
 default.value.invalid=The provided value is invalid
 default.value.required=Value for this property is required
+default.validation.error=Information you provided is invalid
 password.invalid=Your password does not cover all the security requirements. It should have at least one upper case English letter, one lower case English letter, one digit, one special character and be minimum 8 characters long.
-user.not.found=User with id {0} not found
-user.name.not.found=UserName with id {0} not found
-password.not.found=Password with id {0} not found
+default.not.found={0} with id {1} not found
+user.by.email.not.found=User with email '{0}' not found
+user.by.user.name.not.found=User with username '{0}' not found
+user.by.user.name.conflict=User with username '{0}' already exists
+user.by.email.conflict=User with email '{0}' already exists
+role.by.name.not.found=Role with name '{0}' not found
+user.name.by.user.id.not.found=Not username that belongs to user with id '{0}' has been found
+user.name.not.found=Username '{0}' not found
+no.current.password.found=User has not current password
+invalid.authentication.data=Invalid authentication data provided
